--- a/peer/index.html
+++ b/peer/index.html
@@ -1124,6 +1124,7 @@ function buildPdfReport() {
                 el("backToQ1").onclick = () => show("q1");
 
                 el("submitAll").onclick = () => {
+                     window.__SYNC_SENT__ = false;
   try {
     const totals = computeTotals();
     el("scorePercent").textContent = "OVERALL SCORE " + totals.pct + "%";
@@ -2150,44 +2151,56 @@ document.addEventListener("bed:pdf-ready", activatePdfButtons);
 </script>
 
 <script>
-/* === BED sync wrapper (forced form post, CORS-safe) === */
+/* === BED sync wrapper (single-run hybrid: prefer gsync, fallback form; no duplicates) === */
 (function () {
-  if (window.__SYNC_SHIM_FORCE__) return;
-  window.__SYNC_SHIM_FORCE__ = true;
+  // One-shot guard per submission
+  window.__SYNC_SENT__ = false;
 
+  // Build payload with BOTH naming styles (no-spaces + human labels)
   function collectPayload() {
     const S   = window.__S || {};
     const qs  = Array.isArray(S.questions) ? S.questions : [];
     const ans = S.answers || {};
-    const data = {
-      TIMESTAMP: new Date().toISOString(),
 
-      // person fields (match your sheet header names if you already set them)
-      "NAME TEAM MEMBER":  document.getElementById("nick")?.value || "",
-      "EMAIL TEAM MEMBER": document.getElementById("email")?.value || "",
-      "LOCATION TEAM MEMBER": document.getElementById("hotel")?.value || "",
-
-      "NAME PEER REVIEWER":  document.getElementById("peerName")?.value || "",
-      "EMAIL PEER REVIEWER": document.getElementById("peerEmail")?.value || "",
-      "LOCATION PEER REVIEWER": document.getElementById("peerHotel")?.value || "",
-
-      "OVERALL SCORE": (document.getElementById("scorePercent")?.textContent || "").replace(/[^\d]/g, ""),
-      "RECOMMENDATIONS": document.getElementById("recText")?.innerHTML || ""
+    const payload = {
+      // generic keys (no spaces, lower_snake)
+      timestamp: new Date().toISOString(),
+      team_name:    document.getElementById("nick")?.value || "",
+      team_email:   document.getElementById("email")?.value || "",
+      team_hotel:   document.getElementById("hotel")?.value || "",
+      peer_name:    document.getElementById("peerName")?.value || "",
+      peer_email:   document.getElementById("peerEmail")?.value || "",
+      peer_hotel:   document.getElementById("peerHotel")?.value || "",
+      overall_pct:  (document.getElementById("scorePercent")?.textContent || "").replace(/[^\d]/g, ""),
+      recommendation_html: document.getElementById("recText")?.innerHTML || ""
     };
 
-    // Q1..Q35 in order
+    // add human-label mirrors (spaces & caps) in case GAS expects those
+    payload["TIMESTAMP"] = payload.timestamp;
+    payload["NAME TEAM MEMBER"]        = payload.team_name;
+    payload["EMAIL TEAM MEMBER"]       = payload.team_email;
+    payload["LOCATION TEAM MEMBER"]    = payload.team_hotel;
+    payload["NAME PEER REVIEWER"]      = payload.peer_name;
+    payload["EMAIL PEER REVIEWER"]     = payload.peer_email;
+    payload["LOCATION PEER REVIEWER"]  = payload.peer_hotel;
+    payload["OVERALL SCORE"]           = payload.overall_pct;
+    payload["RECOMMENDATIONS"]         = payload.recommendation_html;
+
+    // Q1..Q35 as both styles
     qs.forEach((q, i) => {
       const key = "Q" + (i + 1);
       const id  = q?.id;
-      data[key] = (id != null && ans[id] != null) ? String(ans[id]) : "";
+      const val = (id != null && ans[id] != null) ? String(ans[id]) : "";
+      payload[key] = val;          // e.parameter["Q1"]
+      payload["q" + (i + 1)] = val; // e.parameter.q1
     });
-    return data;
+
+    return payload;
   }
 
   function postForm(url, data) {
     const params = new URLSearchParams();
     Object.keys(data).forEach(k => params.append(k, data[k]));
-    // Use no-cors so the request always leaves the page even if GAS doesn’t send CORS headers
     return fetch(url, {
       method: "POST",
       headers: {"Content-Type": "application/x-www-form-urlencoded;charset=UTF-8"},
@@ -2196,19 +2209,30 @@ document.addEventListener("bed:pdf-ready", activatePdfButtons);
     });
   }
 
-  // Expose a single call used by submit handler
-  window.syncToSheetSafe = function () {
-    const url = String(window.WEBAPP_URL || "").trim();
-    if (!url) { console.warn("[BED] WEBAPP_URL missing"); return; }
+  window.syncToSheetSafe = async function () {
+    if (window.__SYNC_SENT__) return;     // prevent duplicates
+    window.__SYNC_SENT__ = true;
+
+    // Prefer your original gsync.js if present
     try {
-      const payload = collectPayload();
-      postForm(url, payload);
+      if (typeof window.syncToSheet === "function") {
+        await window.syncToSheet();
+        return;
+      }
     } catch (e) {
-      console.warn("[BED] syncToSheetSafe error:", e);
+      // fall through to form post
+      // console.warn("[BED] syncToSheet() error, using fallback:", e);
     }
+
+    // Fallback direct post to Apps Script
+    const url = String(window.WEBAPP_URL || "").trim();
+    if (!url) return;
+    const data = collectPayload();
+    try { await postForm(url, data); } catch (_) {}
   };
 })();
 </script>
+
 
 
 <script src="../gsync.js?v=21"></script>
