--- a/peer/index.html
+++ b/peer/index.html
@@ -665,7 +665,8 @@ button:disabled,
   margin-top: 20px !important;            /* adds one blank line above */
 }
 </style>
-
+<link rel="icon" href="data:,">
+  
 </head>
     <body>
         <main class="container">
