--- a/peer/index.html
+++ b/peer/index.html
@@ -1128,12 +1128,12 @@ button:disabled,
                         document.head.appendChild(markerStyle);
                     }
                     markerStyle.textContent = ".gauge::after{left: calc(var(--marker) - 5px);}";
-                    let rec = "";
-                    if (totals.pct < 50) rec = "You are behind and need more support. Please contact your coach and ask your team members for guidance";
-                    else if (totals.pct < 70) rec = "Focus on developing yourself. Practice makes you better. Ask for honest feedback from your friends so you know what you can do better";
-                    else if (totals.pct < 85) rec = "Great hospitality! Keep challenging yourself and help others by giving them honest and positive feedback";
-                    else rec = "Awesome! Your understanding of BED is an inspiration for others. Continue to lead others by example";
-                    document.getElementById("recText").textContent = rec;
+                     let rec = "";
+                    if (totals.pct < 50) rec = `This score suggests that you are behind. You need to develop yourself, learn more about BED, and focus more on the job. Observe others but don’t copy them. You must find your own identity. Set a few personal goals each week and ask the team to evaluate your progress. Contact your coach for advice`;
+                    else if (totals.pct < 70) rec = `This score suggests that you are taking the job too easy. You need to develop yourself. You are playing in the Premier League. Be aware of your actions and be more proactive. Push yourself to be an equal member of the team. Ask your friends for suggestions and ask yourself: did I do things different today?`;
+                    else if (totals.pct < 85) rec = `This score suggests that your hospitality competencies are great. You are good at reading people and situations. It is important to keep challenging yourself. Use BED to learn new things. Contribute to BED 2.0 and actively support your team members by giving honest and positive feedback`;
+                    else rec = `The score suggests you truly understand BED. You care for people, hotel and organization and understand what Shared Leadership means. Continue to lead others by example. Use your leadership strengths to grow within the organization and take an executive role in shaping BED 2.0. You are ready for the next level`;
+                    document.getElementById("recText").innerHTML = rec;
                     renderGroupResults();
 buildPdfReport();                                   // build PDF DOM now
 document.dispatchEvent(new Event('bed:pdf-ready')); // signal: PDF is ready for export
