--- a/peer/index.html
+++ b/peer/index.html
@@ -1129,11 +1129,11 @@ button:disabled,
                     }
                     markerStyle.textContent = ".gauge::after{left: calc(var(--marker) - 5px);}";
                     let rec = "";
-                    if (totals.pct < 50) rec = "You are behind and need more support. Please contact your coach and ask your team members for guidance";
-                    else if (totals.pct < 70) rec = "Focus on developing yourself. Practice makes you better. Ask for honest feedback from your friends so you know what you can do better";
-                    else if (totals.pct < 85) rec = "Great hospitality! Keep challenging yourself and help others by giving them honest and positive feedback";
-                    else rec = "Awesome! Your understanding of BED is an inspiration for others. Continue to lead others by example";
-                    document.getElementById("recText").textContent = rec;
+                    if(totals.pct < 50) rec = `This score suggests that you are behind. You need to develop yourself, learn more about BED, and focus more on the job. Observe others but don’t copy them. You must find your own identity. Set a few personal goals each week and ask the team to evaluate your progress. Contact your coach for advice`;
+                    else if(totals.pct < 70) rec = `This score suggests that you are taking your job too lightly. You need to develop yourself. Be more aware of your actions and practice. You are playing in the Premier League. Be more proactive and push yourself to become an equal member of the team. Ask your team for suggestions so you know what you can do better and then ask yourself. Did I do things different today?`;
+                    else if(totals.pct < 90) rec = `This score suggests that your hospitality competencies are great. You can read people and situations. It is important to keep challenging yourself. Use BED to learn new things. Contribute new ideas for BED 2.0 and actively support your team members by giving honest and positive feedback`;
+                    else rec = `This score suggests you truly understand BED. You care for people, the hotel and the organization. Success is a shared responsibility. Continue to lead others by example. Use your leadership strengths to grow within the organization and consider taking an executive role in shaping BED 2.0. You are ready for the next level`;
+                    document.getElementById("recText").innerHTML = rec;
                     renderGroupResults();
 buildPdfReport();                                   // build PDF DOM now
 document.dispatchEvent(new Event('bed:pdf-ready')); // signal: PDF is ready for export
