--- a/peer/index.html
+++ b/peer/index.html
@@ -1198,14 +1198,10 @@ if (typeof window.syncToSheet === 'function') {
                         const recTarget = document.getElementById("pdfBandText");
                         if (!recTarget) return;
                         let rec = "";
-                        if (totals.pct < 50) {
-                            rec = "You are behind and need more support. Please contact your coach and ask your team members for guidance";
-                        } else if (totals.pct < 70) {
-                            rec = "Focus on developing yourself. Practice makes you better. Ask for honest feedback from your friends so you know what you can do better";
-                        } else if (totals.pct < 85) {
-                            rec = "Great hospitality! Keep challenging yourself and help others by giving them honest and positive feedback";
-                        } else {
-                            rec = "Awesome! Your understanding of BED is an inspiration for others. Continue to lead others by example";
+                    if(totals.pct < 50) rec = `This score suggests that you are behind. You need to develop yourself, learn more about BED, and focus more on the job. Observe others but don’t copy them. You need to find your own identity. Set a few personal goals each week and ask the team to evaluate your progress. Contact your coach for advice`;
+                    else if(totals.pct < 70) rec = `This score suggests that you are taking your job too easy. You are playing in the Premier League. You need to develop yourself. Be more aware of your actions and practice.  Be more proactive and push yourself to become an equal member of the team. Ask your team for suggestions and feedback and then ask yourself: did I do things different today?`;
+                    else if(totals.pct < 90) rec = `This score shows that you have great hospitality competencies. You can clearly read people and situations. But it’s important to keep challenging yourself. Use BED to learn new things. Contribute to BED 2.0 and actively help your team members by giving honest and positive feedback`;
+                    else rec = `This score shows you truly understand BED. You care for people, hotel and organization and understand the meaning of Shared Leadership. Continue to lead others by example. Use your leadership strengths to grow in the organization and take an executive role in shaping BED 2.0. You are ready for the next level`;
                         }
 
                         recTarget.innerHTML =
