--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
       <h1 id="title">BED HOSPITALITY 2.0</h1>
       <div class="subhead">Self Assessment Form</div>
 
+      <div class="intro">
+  <p style="font-size:14px; color:#1E90FF;">
+    BED 2.0 will change but our foundation of care, shared responsibility, passion and common sense will always be the same. The goal of this app is to remind ourselves about the things that make BED special so we can develop ourselves and others
+  </p>
+</div>
+      
       <!-- Button 1: Team (single person) -->
       <button class="btn" onclick="location.href='./team/';"
         aria-label="I am a team member. I want to assess myself.">
