--- a/team/index.html
+++ b/team/index.html
@@ -720,11 +720,11 @@ button:disabled,
             </section>
             <!-- Instructions -->
             <section id="instructions" style="display: none;">
-                <h2 class="section-title">INSTRUCTIONS</h2>
+                <h2 class="section-title">before you start</h2>
                 <p class="intro">
-                    Read each statement and think how you act in these situations. Then rating yourself from 1-5. Be honest with yourself. Looking in the mirror help you to understand what you're good at and what you can do better
+                    You will get 35 short statements. Read each one and think about how you act in these situations. Then score yourself from 1 to 5. Be honest with yourself. This app is a mirror to show you what you’re good at and what you can do better
                 </p>
-                <h2 class="section-title">RATING</h2>
+                <h2 class="section-title">about the scoring</h2>
                 <ul class="scale-list" style="list-style: none; padding: 0; margin: 10px 0;">
                     <li class="scale-item" style="display: flex; align-items: center; gap: 10px; margin: 8px 0; font-size: 12pt;">
                         <span class="badge" style="width: 28px; height: 28px; border-radius: 50%; background: var(--blue); color: #fff; display: inline-flex; align-items: center; justify-content: center; font-weight: 700;">1</span>
